dab2c-executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-se.yaml
kind: ServiceEntry
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: egressgateway-daconf-@fpi-name@-unver
spec:
  exportTo:
    - .
  hosts:
    - '${@fpi-name@.ctr.istio.egress.se.http.daconf.host}'
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - name: https-daconf
      number: ${@fpi-name@.ctr.istio.egress.se.http.daconf.port}
      protocol: https
    - name: http-8080
      number: 80
      protocol: http
